--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Assets\InstancedColor.cs" />
     <Compile Include="Assets\My Pipeline\MyPipeline.cs" />
     <Compile Include="Assets\My Pipeline\MyPipelineAsset.cs" />
+    <None Include="Assets\My Pipeline\ShaderLibrary\ShadowCaster.hlsl" />
     <None Include="Assets\My Pipeline\ShaderLibrary\Unlit.hlsl" />
     <None Include="Assets\My Pipeline\Shaders\Unlit.shader" />
     <None Include="Assets\My Pipeline\Shaders\Lit.shader" />
