完成Post-Processing，此时Global Illumination尚在搁置中

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,15 @@
     <Compile Include="Assets\InstancedMaterialProperties.cs" />
     <Compile Include="Assets\My Pipeline\MyPipeline.cs" />
     <Compile Include="Assets\My Pipeline\MyPipelineAsset.cs" />
+    <Compile Include="Assets\My Pipeline\MyPostProcessingStack.cs" />
+    <Compile Include="Assets\MyPipelineCamera.cs" />
+    <None Include="Assets\My Pipeline\ShaderLibrary\PostEffectStack.hlsl" />
     <None Include="Assets\My Pipeline\ShaderLibrary\ShadowCaster.hlsl" />
     <None Include="Assets\My Pipeline\ShaderLibrary\Unlit.hlsl" />
     <None Include="Assets\My Pipeline\Shaders\Unlit.shader" />
     <None Include="Assets\My Pipeline\ShaderLibrary\Meta.hlsl" />
     <None Include="Assets\My Pipeline\ShaderLibrary\Lighting.hlsl" />
+    <None Include="Assets\My Pipeline\Shaders\PostEffectStack.shader" />
     <None Include="Assets\My Pipeline\Shaders\Lit.shader" />
     <None Include="Assets\My Pipeline\ShaderLibrary\Lit.hlsl" />
     <Reference Include="Unity.RenderPipelines.Core.Editor">
